--- a/AI_trends_2024_2025.md
+++ b/AI_trends_2024_2025.md
@@ -168,6 +168,6 @@ footer: '2025/1/6 @Kentaro Nagamatsu'
 
 - 動画生成AI: SoraとKling1.6が高品質動画生成を実現
 - 次世代LLM: OpenAI o1、Gemini 2.0、DeepSeek-V3が性能向上
-- 研究支援: GDeep Researchなど検索系AIエージェントが効率化を促進
+- 研究支援: Deep Researchなど検索系AIエージェントが効率化を促進
 - 開発支援: Cline、Claude MCPとbrowser-useが自動化を加速
 - 物理演算: Genesisが超高速シミュレーションを実現
